--- a/css/highscores.css
+++ b/css/highscores.css
@@ -4,7 +4,7 @@ body {
 
 #highScoresList {
     list-style: none; 
-    margin-bottom: 4rem; 
-    font-size: 2.8rem; 
+    margin-bottom: 64px; 
+    font-size: 44.8px; 
 }
 
