--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ h1 {
 }
 
 h2 {
-    font-size: 4.2rem; 
-    margin-bottom: 4rem; 
+    font-size: 86.4px; 
+    margin-bottom: 64px; 
 }
 
 .container {
@@ -29,23 +29,22 @@ h2 {
     display: flex; 
     justify-content: center;
     align-items: center;
-    max-width: 80rem;
+    max-width: 1280px;
     margin: 0 auto; 
-    padding: 2rem; 
+    padding: 256px; 
 }
 
-.flex-column {
+.column {
     display: flex;
     flex-direction: column;
-
 }
 
-.flex-center {
+.centered {
     justify-content: center;
     align-items: center;
 }
 
-.justify-center {
+.center {
     justify-content: center;
 }
 
@@ -58,20 +57,19 @@ h2 {
 }
 
 .btn {
-    font-size: 2.4rem; 
-    padding: 2rem 0; 
-    width: 30rem; 
+    font-size: 38.4px; 
+    padding: 32px 0; 
+    width: 480px; 
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 16px;
     text-decoration: none;
-    color: rgb(28, 26, 26);
+    color: rgb(29, 26, 26);
     background: skyblue;
     border-radius: 4px;
 }
 
 .btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgb(8, 114, 244, 0.6);
     transition: transform 150ms;
     transform: scale(1.03);
 }
@@ -86,19 +84,19 @@ h2 {
     background: goldenrod;
 }
 
-.end-form-container {
+.end-box {
     width: 100%;
     display: flex; 
     flex-direction: column;
     align-items: center;
-    max-width: 30rem;
+    max-width: 480px;
 }
 
 input {
-    margin-bottom: 1rem; 
-    width: 20rem; 
-    padding: 1.5rem; 
-    font-size: 1.8rem; 
+    margin-bottom: 16px; 
+    width: 320px; 
+    padding: 24px; 
+    font-size: 28.8px; 
     border: none;
 }
 
@@ -107,13 +105,13 @@ input::placeholder {
 }
 
 #username {
-    margin-bottom: 3rem; 
+    margin-bottom: 48px; 
     width: 100%; 
     outline: none; 
 }
 
 #end-text {
-    font-size: 2.4rem; 
+    font-size: 38.4px; 
     color: white; 
     text-align: center; 
 }
