added sound to right and wrong questions

--- a/css/highscores.css
+++ b/css/highscores.css
@@ -2,6 +2,10 @@ body {
     color: #EDF5E1; 
 }
 
+#finalScore {
+    text-decoration: underline;
+}
+
 #highScoresList {
     list-style: none; 
     margin-bottom: 64px; 
