--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@
 }
 
 h1 {
-    font-size: 5.4rem; 
+    font-size: 70px; 
     color: #EDF5E1; 
-    margin-bottom: 5rem; 
+    margin-bottom: 30px; 
 }
 
 h2 {
@@ -25,7 +25,7 @@ h2 {
 
 .container {
     width: 100vw; 
-    height: 50vw; 
+    height: 45vw; 
     display: flex; 
     justify-content: center;
     align-items: center;
